--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -6,8 +6,8 @@
     <title>Carefree Image Upload and OCR by Naver Clova OCR</title>
 </head>
 <body>
-<h1>Carefree Image Upload and OCR by Naver Clova OCR</h1>
-<h2>주의 !! 다음과 같은 형식의 등기 번호가 이미지에 존재해야 인식 가능합니다</h2>
+<h1>CarefreeLife's Image Upload and OCR by Naver Clova OCR</h1>
+<h2>주의 !! 다음과 같은 형식의 등기 번호가 이미지에 존재해야 인식 가능합니다.</h2>
 <h2>
     1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
     2. "익일특급" / "통상" Text 발견 시 다음 등기 번호를 찾습니다. <br>
