--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+    </style>
     <title>Carefree Image Upload and OCR by Naver Clova OCR</title>
 </head>
 <body>
 <h1>CarefreeLife's Image Upload and OCR by Naver Clova OCR</h1>
+    <img src="/static/image/gangsan21_logo.png" alt="gangsan21_logo">
 <h2>주의 !! 다음과 같은 형식의 등기 번호가 이미지에 존재해야 인식 가능합니다!!</h2>
-<h2>
+<h3>
     1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
     2. "익일특급" / "통상" Text 발견 시 다음 등기 번호를 찾습니다. <br>
     3. "합계" Text 발견 시 종료합니다. <br>
-</h2>
+</h3>
 <form action="/uploadAndOcr" method="post" enctype="multipart/form-data">
     <input type="file" name="file" accept=".jpg, .jpeg, .png">
     <button type="submit">Upload and OCR</button>
