--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>CarefreeLife's Image Upload and OCR by Naver Clova OCR</h1>
-    <img src="/static/image/gangsan21_logo.png" alt="gangsan21_logo">
+    <img src="image/gangsan21_logo.png" alt="gangsan21_logo">
 <h2>주의 !! 다음과 같은 형식의 등기 번호가 이미지에 존재해야 인식 가능합니다!!</h2>
 <h3>
     1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
