--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -22,6 +22,7 @@
             <h1>CarefreeLife's 강산21 M&A OCR</h1>
         </div>
         <img src="image/gangsan21_logo.png" alt="gangsan21_logo">
+        <br><br>
         <div class="row">
             <div class="col">
                 <form action="/uploadAndOcr" method="post" enctype="multipart/form-data">
@@ -30,13 +31,14 @@
                 </form>
             </div>
         </div>
-        <h2>주의 !! 다음과 같은 형식의 등기 번호가 이미지에 존재해야 인식 가능합니다!!</h2>
-        <h3>
+        <h2>주의 !! 다음과 같은 형식의 등기 번호가 <br>
+            이미지에 존재해야 인식 가능합니다!!</h2>
+        <li>
             1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
             2. "익일특급" / "통상" Text 발견 시 다음 등기 번호를 찾습니다. <br>
             3. "합계" Text 발견 시 종료합니다. <br>
             4. 깔끔하게 찍힌 사진 / Scan 파일 사용 시 더욱 세밀한 OCR 이 가능합니다. <br>
-        </h3>
+        </li>
     </div>
 </body>
 </html>
