--- a/src/main/resources/templates/ocr-result.html
+++ b/src/main/resources/templates/ocr-result.html
@@ -37,7 +37,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr th:each="result : ${ocrResult}" th:text="${result}"></tr>
+        <form th:each="result : ${ocrResult}" th:text="${result}"></form>
         </tbody>
       </table>
     </div>
