--- a/src/main/resources/templates/ocr-result.html
+++ b/src/main/resources/templates/ocr-result.html
@@ -3,44 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta charset="utf-8">
-  <link th:href="@{/css/bootstrap.min.css}"
-        href="../css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
   <title>Carefree Life's OCR Result</title>
 </head>
 <body>
-  <div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
-      <h1>CarefreeLife's 강산21 M&A OCR 결과</h1>
-    </div>
-    <br><br>
-    <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=0">연동된 Google Sheet 으로 이동</a>
-    <div class="row">
-      <div class="col">
-        <form action="/upload-form" method="get">
-          <button type="submit">다시 하기</button>
-        </form>
-      </div>
-    </div>
-    <br><br>
-    <hr class="my-4">
-    <div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>NO.</th>
-            <th>등기 번호</th>
-            <th>등기 확인 링크</th>
-            <th>우편 번호</th>
-            <th>법인 명</th>
-            <th>받는 분</th>
-            <th>주소</th>
-          </tr>
-        </thead>
-        <tbody>
-        <form th:each="result : ${ocrResult}" th:text="${result}"></form>
-        </tbody>
-      </table>
+<div class="container" style="max-width: 600px">
+  <div class="py-5 text-center">
+    <h1>CarefreeLife's 강산21 M&A OCR 결과</h1>
+  </div>
+  <br><br>
+  <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=0">연동된 Google Sheet 으로 이동</a>
+  <div class="row">
+    <div class="col">
+      <form action="/upload-form" method="get">
+        <button type="submit">다시 하기</button>
+      </form>
     </div>
   </div>
+  <br><br>
+  <hr class="my-4">
+  <div>
+    <table class="table">
+      <thead>
+      <tr>
+        <th>NO.</th>
+        <th>등기 번호</th>
+        <th>등기 확인 링크</th>
+        <th>우편 번호</th>
+        <th>법인 명</th>
+        <th>받는 분</th>
+        <th>주소</th>
+      </tr>
+      </thead>
+      <tbody>
+      <!-- Iterate over ocrResult and bind each property to the corresponding column -->
+      <tr th:each="result, rowStat : ${ocrResult}">
+        <td th:text="${rowStat.index + 1}">1</td>
+        <td th:text="${result[rowStat.index + 2]}">[Registration Number]</td>
+        <td th:text="${result[rowStat.index + 3]}">[Registration Link]</td>
+        <td th:text="${result[rowStat.index + 4]}">[Postal Code]</td>
+        <td th:text="${result[rowStat.index + 5]}">[Corporate Name]</td>
+        <td th:text="${result[rowStat.index + 6]}">[Recipient]</td>
+        <td th:text="${result[rowStat.index + 7]}">[Address]</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 </body>
 </html>
