--- a/src/main/resources/templates/ocr-result.html
+++ b/src/main/resources/templates/ocr-result.html
@@ -25,7 +25,7 @@
   <div>
     <table class="table">
       <!-- Iterate over ocrResult and bind each property to the corresponding column -->
-      <tr th:each="result: ${ocrResult}"></tr>
+      <tr th:each="result: ${ocrResult}" th:text="${result}"></tr>
     </table>
   </div>
 </div>
