--- a/src/main/resources/templates/ocr-result.html
+++ b/src/main/resources/templates/ocr-result.html
@@ -9,10 +9,11 @@
 <body>
 <div class="container" style="max-width: 600px">
   <div class="py-5 text-center">
-    <h1>CarefreeLife's 강산21 M&A OCR 결과</h1>
+    <h1>CarefreeLife's 강산21 M&A <br> OCR 결과</h1>
   </div>
   <br><br>
-  <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=0">연동된 Google Sheet 으로 이동</a>
+  <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=">연동된 Google Sheet 으로 이동</a>
+  <br><br>
   <div class="row">
     <div class="col">
       <form action="/upload-form" method="get">
