--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -29,6 +29,9 @@
                     <input type="file" name="file" accept=".jpg, .jpeg, .png">
                     <button type="submit">Upload and OCR</button>
                 </form>
+                <br><br>
+                <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=">연동된 Google Sheet 으로 이동</a>
+                <br><br>
             </div>
         </div>
         <br><br>
