--- a/src/main/resources/templates/ocr-result-business.html
+++ b/src/main/resources/templates/ocr-result-business.html
@@ -17,7 +17,7 @@
   <div class="row">
     <div class="col">
       <form action="/upload-form" method="get">
-        <button type="submit">다시 하기</button>
+        <button type="submit">다시 하기!</button>
       </form>
     </div>
   </div>
