modify url : /ocrBusiness

--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -29,7 +29,7 @@
                     <input type="file" name="file" accept=".jpg, .jpeg, .png">
                     <button type="submit">등기 영수증 OCR</button>
                 </form>
-                <form action="/uploadAndOcrBusiness" method="post" enctype="multipart/form-data">
+                <form action="/ocrBusiness" method="post" enctype="multipart/form-data">
                     <input type="file" name="file" accept=".jpg, .jpeg, .png">
                     <button type="submit">사업자 등록증 OCR</button>
                 </form>
