--- a/src/main/resources/templates/ocr-result-business.html
+++ b/src/main/resources/templates/ocr-result-business.html
@@ -12,7 +12,7 @@
     <h1>CarefreeLife's 강산21 M&A<br>사업자 등록증 OCR 결과</h1>
   </div>
   <br><br>
-<!--  <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=">연동된 Google Sheet 으로 이동</a>-->
+  <a href="https://docs.google.com/spreadsheets/d/1ucw8wIlZosXmskTX61odE_CnX8WnEjw9q_Oggj8WwQY/edit#gid=">연동된 Google Sheet 으로 이동</a>
   <br><br>
   <div class="row">
     <div class="col">
