--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -29,6 +29,9 @@
                     <input type="file" name="file" accept=".jpg, .jpeg, .png">
                     <button type="submit">등기 영수증 OCR</button>
                 </form>
+                <br><br>
+                <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=">[등기] Google Sheet 으로 이동</a>
+                <br><br>
 
                 <br><br>
 
@@ -36,10 +39,10 @@
                     <input type="file" name="file" accept=".jpg, .jpeg, .png">
                     <button type="submit">사업자 등록증 OCR</button>
                 </form>
+                <br><br>
+                <a href="https://docs.google.com/spreadsheets/d/1ucw8wIlZosXmskTX61odE_CnX8WnEjw9q_Oggj8WwQY/edit#gid=">[사업자] Google Sheet 으로 이동</a>
+                <br><br>
 
-                <br><br>
-                <a href="https://docs.google.com/spreadsheets/d/1UADUNDLfmaQLJ1woHzVs9sq2HyScmfLla4lKvjaAwy8/edit#gid=">연동된 Google Sheet 으로 이동</a>
-                <br><br>
             </div>
         </div>
         <br><br>
