--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -17,7 +17,7 @@
     <title>Carefree Life's OCR Result</title>
 </head>
 <body>
-    <div class="container" style="max-width: 600px">
+    <div class="container" style="max-width: 900px">
         <div class="py-5 text-center">
             <h1>CarefreeLife's 강산21 M&A OCR</h1>
         </div>
@@ -47,7 +47,9 @@
         </div>
         <br><br>
         <h3>주의 !! 다음과 같은 형식의 등기 번호가 <br>
-            이미지에 존재해야 인식 가능합니다!!</h3> <br>
+            이미지에 존재해야 인식 가능합니다!!
+        </h3>
+        <br>
             1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
             2. "익일특급" / "통상" Text 발견 시 다음 등기 번호를 찾습니다. <br>
             3. "합계" Text 발견 시 종료합니다. <br>
