--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>Carefree Life's OCR Result</title>
+    <title>Carefree Life's OCR</title>
 </head>
 <body>
     <div class="container" style="max-width: 900px">
