--- a/src/main/resources/templates/upload-form.html
+++ b/src/main/resources/templates/upload-form.html
@@ -24,6 +24,9 @@
         </div>
         <br><br>
         <div class="row">
+            <form action="/" method="get">
+                <button type="submit">홈으로 이동</button>
+            </form>
             <div class="col">
                 <form action="/uploadAndOcr" method="post" enctype="multipart/form-data">
                     <input type="file" name="files" multiple accept=".jpg, .jpeg, .png">
