--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>ERROR!!</title>
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../css/bootstrap.min.css" rel="stylesheet">
+    <title>Carefree Life's OCR</title>
 </head>
 <body>
-
+<div class="container" style="max-width: 600px">
+    <img src="image/gangsan21_logo.png" alt="gangsan21_logo">
+    <div class="py-5 text-center">
+        <h1>CarefreeLife's 강산21 M&A OCR</h1>
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col">
+            <h1>예상치 못한 에러가 발생 했습니다. 적절한 이미지 파일을 업로드 했는지 확인해주세요.</h1>
+            <h2>
+                개발자 연락처 <br>
+                TEL: 010-2532-4903 <br>
+                E-Mail: csm12180318@gmail.com <br>
+            </h2>
+        </div>
+    </div>
+    <br><br>
+    <h3>주의 !! 다음과 같은 형식의 등기 번호가 <br>
+        이미지에 존재해야 인식 가능합니다!!
+    </h3>
+    <br>
+    1. 등기 번호 : (숫자 5자리)-(숫자 네 자리)-(숫자 네 자리) <br>
+    2. "익일특급" / "통상" Text 발견 시 다음 등기 번호를 찾습니다. <br>
+    3. "합계" Text 발견 시 종료합니다. <br>
+    4. 깔끔하게 찍힌 사진 / Scan 파일 사용 시 더욱 세밀한 OCR 이 가능합니다. <br>
+</div>
 </body>
 </html>
