--- a/src/main/resources/templates/ocr-result.html
+++ b/src/main/resources/templates/ocr-result.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta charset="utf-8">
   <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="image/favicon.ico">
   <title>Carefree Life's OCR Result</title>
 </head>
 <body>
