--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,12 +16,15 @@
     <br><br>
     <div class="row">
         <div class="col">
-            <h1>예상치 못한 에러가 발생 했습니다. 적절한 이미지 파일을 업로드 했는지 확인해주세요.</h1>
-            <h2>
+            <h3>예상치 못한 에러가 발생 했습니다. <br> 적절한 이미지 파일을 업로드 했는지 확인해주세요.</h3>
+            <h4>
                 개발자 연락처 <br>
                 TEL: 010-2532-4903 <br>
                 E-Mail: csm12180318@gmail.com <br>
-            </h2>
+            </h4>
+            <form action="/" method="get">
+                <button type="submit">홈으로 이동</button>
+            </form>
         </div>
     </div>
     <br><br>
