--- a/src/main/resources/templates/crawling-result.html
+++ b/src/main/resources/templates/crawling-result.html
@@ -26,7 +26,7 @@
   <hr class="my-4">
   <ul>
     <form id="myForm">
-      <li th:each="result : ${ocrResult}" th:text="${result}"></li>
+      <li th:each="result : ${crawlResult}" th:text="${result}"></li>
     </form>
   </ul>
 </div>
