Update Gang San 21 News

--- a/src/main/resources/templates/news/news-form.html
+++ b/src/main/resources/templates/news/news-form.html
@@ -17,6 +17,9 @@
     <div class="text-center mt-3">
         <button id="load-data-btn" class="btn btn-primary">Load Data</button>
     </div>
+    <div class="text-center mt-3">
+        <button id="back" class="btn btn-primary" href="/">이전으로</button>
+    </div>
     <h2 class="text-center">!! 아래에서 최신 뉴스들을 볼 수 있습니다 !!</h2>
     <div id="data-container" class="mt-4"></div>
     <!--    1. 버튼(Load Data)을 클릭하면 AJAX 요청을 통해 데이터를 가져옴.-->
