[MOLIT API] Google Sheet 구분 필드 한글화

--- a/src/main/resources/templates/construct/molit-form.html
+++ b/src/main/resources/templates/construct/molit-form.html
@@ -119,7 +119,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                데이터를 Google Sheet에 저장하시겠습니까? 저장 후, 5초 뒤 외부 링크로 이동합니다.
+                데이터를 Google Sheet에 저장하시겠습니까? (저장 후 해당 Sheet 으로 이동합니다.)
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
