--- a/src/main/resources/templates/construct/molit-form.html
+++ b/src/main/resources/templates/construct/molit-form.html
@@ -62,10 +62,10 @@
     <div class="row">
         <div class="col">
             <form id="downloadForm" action="/construct/info/molit/download" method="post">
-                <div class="form-group">
-                    <label for="pageNo">페이지 수</label>
-                    <input type="text" class="form-control" id="pageNo" name="pageNo" required>
-                </div>
+<!--                <div class="form-group">-->
+<!--                    <label for="pageNo">페이지 수</label>-->
+<!--                    <input type="text" class="form-control" id="pageNo" name="pageNo" required>-->
+<!--                </div>-->
                 <div class="form-group">
                     <label for="numOfRows">탐색할 업체 수</label>
                     <input type="text" class="form-control" id="numOfRows" name="numOfRows" required>
