Update Molit uriBuilder

--- a/src/main/resources/templates/construct/kica-form.html
+++ b/src/main/resources/templates/construct/kica-form.html
@@ -49,11 +49,11 @@
 </head>
 <body>
 <div class="container" style="max-width: 600px">
-    <img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+    <img src="../../static/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
     <div class="py-5 text-center">
         <h3>[한국정보통신공사협회] 건설업체 정보조회</h3>
         
-        <p>원활한 검색 속도를 위해서 적절한 업체 수를 설정하여 주시기 바랍니다. (10000개 테스트 성공)</p>
+        <p>원활한 검색 속도를 위해서 적절한 업체 수를 설정하여 주시기 바랍니다.<br>(10000개 테스트 성공)</p>
     </div>
     <br><br>
     <div class="row">
