--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -16,6 +16,49 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        .header-image {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+        .btn-custom {
+            width: 100%;
+            margin-bottom: 10px;
+            background-color: #007bff;
+            color: #fff;
+        }
+        .btn-custom:hover {
+            background-color: #0056b3;
+        }
+        footer {
+            background-color: #343a40;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        address {
+            color: #adb5bd;
+        }
+        address p {
+            margin: 0;
+        }
+        a {
+            color: #fff;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -30,7 +73,7 @@
 <!--    </nav>-->
 <!--    <a class="btn btn-outline-primary" href="#">Sign up</a>-->
 <!--</div>-->
-<img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+<img src="../../static/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
 <div class="py-5 text-center">
     <h1>Gangsan21 M&A</h1>
 </div>
@@ -72,7 +115,14 @@
                 <h1 class="card-title">설정 정보 <small class="text-muted">Parameters</small></h1>
                 <ul class="list-unstyled mt-3 mb-4">
                     <li>탐색할 업체 수</li>
-                    <li>검색조건: 상호, 대표자, 등록번호, 주소, 주력 공사분야</li>
+                    <li>
+                        검색조건:<br>
+                        1. 상호<br>
+                        2. 대표자<br>
+                        3. 등록번호<br>
+                        4. 주소<br>
+                        5. 주력 공사분야<br>
+                    </li>
                     <li>등록 시/도 (선택)</li>
                 </ul>
                 <button id="kica-button" type="button" class="btn btn-lg btn-block btn-outline-primary">건설업체 조회하기</button>
@@ -96,7 +146,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="mx-auto text-center">
         <address>
             <p>Gangsan21 M&A</p>
             <p>[도로명] 경기 성남시 중원구 사기막골로 124 (SKn테크노파크)<br>
