Update Image location to : image/

--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -73,7 +73,7 @@
 <!--    </nav>-->
 <!--    <a class="btn btn-outline-primary" href="#">Sign up</a>-->
 <!--</div>-->
-<img src="../../static/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+<img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
 <div class="py-5 text-center">
     <h1>Gangsan21 M&A</h1>
 </div>
