--- a/src/main/resources/templates/construct/kica-form.html
+++ b/src/main/resources/templates/construct/kica-form.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <div class="container" style="max-width: 600px">
-    <img src="../../static/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+    <img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
     <div class="py-5 text-center">
         <h3>[한국정보통신공사협회] 건설업체 정보조회</h3>
         
