--- a/src/main/resources/templates/construct/molit-form.html
+++ b/src/main/resources/templates/construct/molit-form.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <div class="container" style="max-width: 600px">
-    <img src="../../static/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+    <img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
     <div class="py-5 text-center">
         <h3>[국토교통부] 건설 업체 정보 엑셀 다운로드 페이지</h3>
         
