[Construct Info] Update WebClient Buffer to: Unlimited

--- a/src/main/resources/templates/construct/molit-form.html
+++ b/src/main/resources/templates/construct/molit-form.html
@@ -62,7 +62,7 @@
     <br><br>
     <div class="row">
         <div class="col">
-            <form id="downloadForm" action="/construct/info/molit/download" method="post">
+            <form id="downloadForm" action="/construct/info/molit/download" method="get">
 <!--                <div class="form-group">-->
 <!--                    <label for="pageNo">페이지 수</label>-->
 <!--                    <input type="text" class="form-control" id="pageNo" name="pageNo" required>-->
