[Construct Info] Update WebClient Buffer to: Unlimited

--- a/src/main/resources/templates/construct/construct-home.html
+++ b/src/main/resources/templates/construct/construct-home.html
@@ -73,10 +73,10 @@
 <!--    </nav>-->
 <!--    <a class="btn btn-outline-primary" href="#">Sign up</a>-->
 <!--</div>-->
-<img src="image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
-<div class="py-5 text-center">
-    <h1>Gangsan21 M&A</h1>
-</div>
+<img src="http://gangsan21-ocr.site/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
+<!--<div class="py-5 text-center">-->
+<!--    <h1>Gangsan21 M&A</h1>-->
+<!--</div>-->
 <br><br>
 <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">건설업체 조회</h1>
