--- a/src/main/resources/templates/construct/kica-form.html
+++ b/src/main/resources/templates/construct/kica-form.html
@@ -55,6 +55,7 @@
         
         <p>원활한 검색 속도를 위해서 적절한 업체 수를 설정하여 주시기 바랍니다.<br>(10000개 테스트 성공)</p>
     </div>
+    <button id="construct-home-button" type="button" class="btn btn-lg btn-block btn-outline-primary">건설정보 조회 홈</button>
     <br><br>
     <div class="row">
         <div class="col">
@@ -90,6 +91,7 @@
                         <option value="99">제주특별자치도회</option>
                     </select>
                 </div>
+                <br><br>
 <!--                    <input type="text" class="form-control" id="searchSido" name="searchSido">-->
                 <button type="button" class="btn btn-custom" data-toggle="modal" data-target="#confirmationModal">Google Sheet 에 저장하기</button>
             </form>
