--- a/src/main/resources/templates/construct/molit-form.html
+++ b/src/main/resources/templates/construct/molit-form.html
@@ -51,7 +51,7 @@
 <div class="container" style="max-width: 600px">
     <img src="http://gangsan21-ocr.site/image/gangsan21_logo.png" alt="Gangsan21 Logo" class="header-image">
     <div class="py-5 text-center">
-        <h3>[국토교통부] 건설 업체 정보 엑셀 다운로드 페이지</h3>
+        <h3>[국토교통부] 건설업체 정보조회</h3>
         
         <p>검색조건기간 공시기간시작일: 2003년 1월 1일 이후 데이터제공 원활한 검색 속도를 위해서 적절한 기간을 설정하여주시기 바랍니다 (ex : 20141201)</p>
         <p>검색조건기간 공시기간종료일: 원활한 검색 속도를 위해서 적절한 기간을 설정하여주시기 바랍니다 (ex : 20141202)</p>
@@ -139,7 +139,7 @@
 
         // Redirect to external link after form submission
         setTimeout(function() {
-            window.location.href = 'https://docs.google.com/spreadsheets/d/15Mljgjc21zimCM5XWPmGTULoW93zOwjLLv-xiIezg0g/edit#gid=0';
+            window.open('https://docs.google.com/spreadsheets/d/15Mljgjc21zimCM5XWPmGTULoW93zOwjLLv-xiIezg0g/edit#gid=0');
         }, 500); // Adjust the timeout as necessary to ensure the form submission completes
     });
 
